# forgery-finder

./: .editorconfig  .gitignore  .xo-config.json  Dockerfile  app.py  docker-compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml
nginx/: mime.types  nginx.conf
src/forgery_finder/: __init__.py  encode.py  imutils.py  pil_image.py  skimage.py  verify.py
src/forgery_finder/static/: index.css  index.html  index.js
src/forgery_finder/template/: error.html  upload.html  verify.html
